  * NesC (PR#166)
  * Nit (PR#375)
  * Nix (PR#267)
  * Pan
  * Pawn (PR#211)
  * Perl 6 (PR#181)
  * Pig (PR#304)
  * Pike (PR#237)
  * QBasic (PR#182)
  * Red (PR#341)
  * ResourceBundle (#1038)
  * Rexx (PR#199)
  * Rql (PR#251)
  * Rsl
  * SPARQL (PR#78)
  * Slim (PR#366)
  * Swift (PR#371)
  * Swig (PR#168)
  * TADS 3 (PR#407)
  * Todo.txt todo lists
  * Twig (PR#404)

- Added a helper to "optimize" regular expressions that match one of many
  literal words; this can save 20% and more lexing time with lexers that
  highlight many keywords or builtins.

- New styles: "xcode" and "igor", similar to the default highlighting of
  the respective IDEs.

- The command-line "pygmentize" tool now tries a little harder to find the
  correct encoding for files and the terminal (#979).

- Added "inencoding" option for lexers to override "encoding" analogous
  to "outencoding" (#800).

- Added line-by-line "streaming" mode for pygmentize with the "-s" option.
  (PR#165)  Only fully works for lexers that have no constructs spanning
  lines!

- Added an "envname" option to the LaTeX formatter to select a replacement
  verbatim environment (PR#235).

- Updated the Makefile lexer to yield a little more useful highlighting.

- Lexer aliases passed to ``get_lexer_by_name()`` are now case-insensitive.

- File name matching in lexers and formatters will now use a regex cache
  for speed (PR#205).

- Pygments will now recognize "vim" modelines when guessing the lexer for
  a file based on content (PR#118).

- The NameHighlightFilter now works with any Name.* token type (#790).

- Python 3 lexer: add new exceptions from PEP 3151.

- Opa lexer: add new keywords (PR#170).

- Julia lexer: add keywords and underscore-separated number
  literals (PR#176).

- Lasso lexer: fix method highlighting, update builtins. Fix
  guessing so that plain XML isn't always taken as Lasso (PR#163).

- Objective C/C++ lexers: allow "@" prefixing any expression (#871).
